# miscellaneous_codes

./: ABmult.m  README.md  ae6_plot.R  atomsPlot.R  bisection.f90  cg_matlab.m  data.txt  dot_lapack.f90  elipse_plot.m  f_integration.f90  flos_moments.R  gnu_plot  jmol_commands.txt  lagrange_interpol.f90  lagrange_plot.txt  lsolver_lapack.f90  lst_sqr.f90  mat_vec_lapack.f90  moment_inertia.f90  montecarlo_integral.R  newton.f90  plot_taur.f90  programs.txt  putfod3.py  report.txt  rxShell.py  secant.f90
10/: .plot_taur.f90.swp  gnu_plot.txt  plot_taur.f90  plot_vmsh_iso
CPP/: CPP.cbp  CPP.layout  Untitled6.f90  array.c  for_example.c  func_mult.c  hello.c  hellof.c  mat_read.c  mat_vex.c  mem_alloc.c  old_test.c  pointer_example.c  ptr_struct.c  read_print.c  structures_example.c  switchcase_example.c  while_example.c
PROGRAMS/: swap.c
atm_for_optim/: cg.f90  constants.f90  data_av.txt  pot_opt.f90  sec_met.f90
cprograms/: aloc_array.cpp  c_class.cpp  counter_char.cpp  cpsh3_1.cc  cpsh3_2a.cc  cpsh3_2b.cc  cpsh3_4.cc  dyn_alloc_c.c  dyn_alloc_cpp.cpp  dynamyc_matrix.cpp  grade.c  grades.c  log.txt  my_type.cpp  nullptr  nullptr.cc  pointer_new_del.cpp  ptr2  ptroper.cc  ptrs_2.cpp  random_num.cpp  recursive.cc  working_space.cpp  xterm
cps5401/: Makefile  contributors.txt
cps5401/pointerStuff/Project/: CMakeLists.txt  build_cmake.sh
cps5401/pointerStuff/Project/include/: control.h  find_root.h
cps5401/pointerStuff/Project/main/: test_root_finding.c
cps5401/pointerStuff/Project/src/: find_root.c
data/: .RData  .Rhistory  ereportcoup-lsda.txt  (+9 more)
mpi/: h  (+7 more)
(+976 files in other folders)
